--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -13,7 +12,6 @@
     "mongoose": "^8.11.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
@@ -23,6 +21,6 @@
     "typescript": "^5.8.2"
   },
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "start": "nodemon src/server.ts"
   }
 }
