--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,13 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
+    "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^19.0.0",
-    "@types/react-lottie": "^1.2.10",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-lottie": "^1.2.10",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
