--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "4.17.13",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
     "nodemon": "^3.1.9",
@@ -21,6 +21,6 @@
     "typescript": "^5.8.2"
   },
   "scripts": {
-    "start": "nodemon src/server.ts"
+    "start": "nodemon --exec ts-node src/server.ts"
   }
 }
