--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,24 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^19.0.0",
+    "@types/react-youtube": "^7.10.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
