--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://educ-groupe:education@edu-plateform.xdjz9.mongodb.net/
+MONGO_URI=mongodb+srv://educ-groupe:education@edu-plateform.xdjz9.mongodb.net/educ_db_pfe
 JWT_SECRET=secret
