--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.8.2"
   },
   "scripts": {
+    "build": "tsc",
     "start": "nodemon --exec ts-node src/server.ts"
   }
 }
